[package]
name = "sycamore-hooks"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.21"
gloo = "0.7.0"
gloo-timers = { version = "0.2.4", features = ["futures"] }
js-sys = "0.3.57"
serde = { version = "1.0.136", features = ["derive"], optional = true }
sycamore = { version = "0.8.0-beta.4", features = ["suspense"] }
web-sys = "0.3.57"

[dev-dependencies]
tokio = { version = "1.17.0", features = ["rt", "macros"] }

[workspace]
members = ["examples/demo"]
