[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
sycamore = { git = "https://github.com/sycamore-rs/sycamore", rev = "1d5f164", features = [
    "suspense",
] }
sycamore-hooks = { path = "../../" }
sycamore-router = { git = "https://github.com/sycamore-rs/sycamore", rev = "1d5f164" }
